openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lightwell-demo
  labels:
    app.kubernetes.io/part-of: lightwell-integrations
